--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>RailsTaskManager</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,6 +12,15 @@
   </head>
 
   <body>
+    <div class="header">
+        <!-- As a heading -->
+        <nav class="navbar bg-light">
+          <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1">Task Manager</span>
+          </div>
+        </nav>
+      </div>
+
     <%= yield %>
   </body>
 </html>
